--- a/views/user/chat.handlebars
+++ b/views/user/chat.handlebars
@@ -61,6 +61,7 @@
 
             </div>
         </div>
+        {{#ifCond id '!=' 0}}
         <div class="mesgs">
             <div class="heading_msg">
                 <b>
@@ -307,6 +308,7 @@
                 </div>
             </div>
         </div>
+        {{/ifCond}}
     </div>
 
 </div>
