--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,6 +25,8 @@
     <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     <!-- Font Awesome Icons -->  
     <script src="https://kit.fontawesome.com/8f1e06b39f.js" crossorigin="anonymous"></script>
+    <!-- Socket IO -->
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 {{#ifCond path '!=' "landing"}}
 {{>_navbar}}
