--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="same-style header-wishlist">
-                        <a href="/inbox"><i class="pe-7s-chat"></i></a>
+                        <a href="/inbox/0"><i class="pe-7s-chat"></i></a>
                     </div>
                     <div class="same-style cart-wrap">
                         <button class="icon-cart">
