--- a/views/customer/productview.handlebars
+++ b/views/customer/productview.handlebars
@@ -118,41 +118,45 @@
                     <div class="row">
                         <div class="col-lg-8" style="margin: 0 auto;">
                             <div class="review-wrapper">
-                                <a href="/review">Click here to leave a review</a>
+                                <a href="/customer/review/{{pdetails.id}}">Click here to leave a review</a>
                                 <br><br>
+                                {{#each reviews}}
                                 <div class="single-review">
                                     <div class="review-content">
                                         <div class="review-top-wrap">
                                             <div class="review-left">
                                                 <div class="review-name">
-                                                    <h4>ImASnack</h4>
+                                                    <h4>{{username}}</h4>
                                                 </div>
                                                 <div class="review-rating">
-                                                    
+                                                    {{#times stars}}
                                                         <span class="fa fa-star" style="color: orange;"></span>
-                                                        <span class="fa fa-star" style="color: orange;"></span>
-                                                        <span class="fa fa-star" style="color: orange;"></span>
+                                                    {{/times}}
+                                                    <!-- minusStars not working -->
+                                                    {{#minusStars stars}}
                                                         <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
+                                                    {{/minusStars}}
                                                     
                                                 </div>
-                                                <a href=""><i class="fa fa-pencil" title="Update this Review"></i></a>
+                                                <a href="/customer/updatereview/{{../pdetails.id}}/{{id}}"><i class="fa fa-pencil" title="Update this Review"></i></a>
                                             </div>
                                             <div class="review-left">
-                                                <a href="/deleteReview/Ah%20Tong%20Tailor/0/1"><i class="fa fa-times" title="Delete this Review"></i></a>
+                                                <a href="/customer/deletereview/{{../pdetails.id}}/{{id}}"><i class="fa fa-times" title="Delete this Review"></i></a>
                                             </div>
                                         </div>
                                         <div class="review-bottom">
-                                            test 123 45678 this product swee chai butterfly. Best in the world lah. you know no one can compare.
-                                            <a href=""><img src="/uploads/products/1.jpg" width="auto" height="120"></a>
-                                            
+                                            {{review}}
+                                            <br>
+                                            {{#if photo}}
+                                            <a href="/uploads/review/{{photo}}"><img src="/uploads/review/{{photo}}" width="auto" height="120"></a>
+                                            {{/if}}
                                         </div>
                                         <div class="review-bottom" style="font-size:10px">
-                                            17 May 07:22PM
+                                            {{timestamp}}
                                         </div>
                                     </div>
                                 </div>
-                                
+                                {{/each}}
                             </div>
                         </div>
 
