--- a/views/customer/review.handlebars
+++ b/views/customer/review.handlebars
@@ -26,6 +26,7 @@
                               <label for="r5">&#9733;</label>
                             </div>
                                 <input class="form-control" id="stars" name="stars" type="hidden" value="">
+                                <input class="form-control" id="storename" name="storename" type="hidden" value="{{pdetails.storename}}">
                             <div class="col-lg-12">
                                 <label for="review">Leave a Review</label>
                                 <textarea id="review" name="review"></textarea>
