--- a/views/mainselection.handlebars
+++ b/views/mainselection.handlebars
@@ -8,7 +8,7 @@
                             <h3 class="animated">One Stop Tailoring Services</h3>
                             <h1 class="animated"> TailorNow </h1>
                             <div class="slider-btn btn-hover">
-                                <a class="animated" href="/homecust">SHOP NOW</a>
+                                <a class="animated" href="/customer">SHOP NOW</a>
                             </div>
                         </div>
                     </div>
