--- a/views/customer/viewstore.handlebars
+++ b/views/customer/viewstore.handlebars
@@ -69,8 +69,11 @@
                                 <div class="product-content text-center">
                                     <h3><a href="/view/{{id}}">{{name}}</a></h3>
                                     <div class="product-rating">
-                                        <span class="fa fa-star" style="color: orange;"></span><span class="fa fa-star" style="color: orange;"></span><span class="fa fa-star" style="color: orange;"></span><span class="fa fa-star"></span><span class="fa fa-star"></span>
-                                        3 stars
+                                        {{#each ../review}}
+                                            {{#ifCond productid '==' ../id}}
+                                                    {{#times avgRating}}<span class="fa fa-star" style="color: orange;"></span>{{/times}}{{#minusStars avgRating}}<span class="fa fa-star"></span>{{/minusStars}}{{avgRating}} stars
+                                            {{/ifCond}} 
+                                        {{/each}}
                                     </div>
                                     <div class="product-price">
                                         {{#ifCond discount '!=' 0}}
