--- a/views/user/chat.handlebars
+++ b/views/user/chat.handlebars
@@ -430,4 +430,9 @@
         }, 1000);
 
     });
+    
+    io.on("send_notification", function (data) {
+        console.log("send_notification recieved");
+
+    });
 </script>
