--- a/views/tailor/viewcourse.handlebars
+++ b/views/tailor/viewcourse.handlebars
@@ -11,104 +11,187 @@
     </div>
 </div>
 <div class="Blog-area pt-100 pb-100">
-    <div class="container"> 
+    <div class="container">
         <!-- <div class="row flex-row-reverse">
             <div class="col-lg-9">
                 <div class="ml-20"> -->
-                    <a href="/createcourse" style="font-size: 20px; font: 20px;"> <i class="fa fa-plus"></i> ADD COURSE</a>
-                    
-                    <br><br>
-                    <div class="row">
-                        <!--for loop?????????-->
+        <a href="/tailor/createcourse" style="font-size: 20px; font: 20px;"> <i class="fa fa-plus"></i> ADD COURSE</a>
 
-                        
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="blog-wrap-2 mb-30">
-                                <div class="blog-img-2">
-                                    <!-- <img src="public/img/sewimg2.jpg"> -->
-                                    <a href="single-product.html"><img src="/img/sewimg1.jpg" style="height:150px; width: 100%;"></a>
-                                </div>
-                                <div class="blog-content-2">
-                                    
-                                    <h4>Sewing Basics</h4>
-                                    <div class="blog-meta-2">
-                                        By Ah Tong Tailor
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <p>Learn basic sewing skills!</p>
-                                    </div>
-                                    
-                                    <div class="blog-share-comment">
-                                        <br>
-                                        <hr>
-                                        <br>
-                                        <div class="blog-share" style="float: right;">
-                                            <span style="font-size: 25px;">SGD $ 25</span>
-                                        </div>
-                                    </div>
-                                    <div class="blog-btn-2">
-                                        <a href="/updatecourse">Edit</a> &nbsp;
-                                        <a href="/addcontent">Content</a> &nbsp;
-                                        <a href="/">Delete</a>
-                                    <!--delete course modal-->
-                                    </div>
-                                        
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="blog-wrap-2 mb-30">
-                                <div class="blog-img-2">
-                                    <!-- <img src="public/img/sewimg2.jpg"> -->
-                                    <a href="single-product.html"><img src="/img/sewimg5.jpg" style="height:150px; width: 100%;"></a>
-                                </div>
-                                <div class="blog-content-2">
-                                    
-                                    <h4>DIY Emboidery</h4>
-                                    <div class="blog-meta-2">
-                                        By Ah Tong Tailor
-                                    </div>
-                                    <br>
-                                    <div>
-                                        <p>Want patterns on your clothes? Learn emboidery change how your clothes look!</p>
-                                    </div>
-                                    
-                                    <div class="blog-share-comment">
-                                        <br>
-                                        <hr>
-                                        <br>
-                                        <div class="blog-share" style="float: right;">
-                                            <span style="font-size: 25px;">SGD $ 30</span>
-                                        </div>
-                                    </div>
-                                    <div class="blog-btn-2">
-                                        <a href="/updatecourse">Edit</a> &nbsp;
-                                        <a href="/addcontent">Content</a> &nbsp;
-                                        <a href="">Delete</a>
-                                    <!--delete course modal-->
-                                    </div>
-                                        
-                                </div>
-                            </div>
-                        </div>
-                        
-                        
-                       
+        <br><br>
+
+        <div class="row">
+            <!--for loop?????????-->
+            {{#if course}}
+            {{#each course}}
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="blog-wrap-2 mb-30">
+                    <div class="blog-img-2">
+                        <!-- <img src="public/img/sewimg2.jpg"> -->
+                        <a href="single-product.html"><img src="/uploads/courseimg/{{thumbnail}}"
+                                style="height:150px; width: 100%;"></a>
                     </div>
-                    <div class="pro-pagination-style text-center mt-20">
-                        <ul>
-                            <li><a class="prev" href="#"><i class="fa fa-angle-double-left"></i></a></li>
-                            <li><a class="active" href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a class="next" href="#"><i class="fa fa-angle-double-right"></i></a></li>
-                        </ul>
+                    <div class="blog-content-2">
+
+                        <h4>{{title}}</h4>
+                        <div class="blog-meta-2">
+                            By Ah Tong Tailor
+                        </div>
+                        <br>
+                        <div>
+                            <p>{{description}}</p>
+                        </div>
+
+                        <div class="blog-share-comment">
+                            <br>
+                            <hr>
+                            <br>
+                            <div class="blog-share" style="float: right;">
+                                <span style="font-size: 25px;">$ {{price}}</span>
+                            </div>
+                        </div>
+                        <div class="blog-btn-2">
+                            <a href="/tailor/updatecourse/{{id}}">Edit</a> &nbsp;
+                            <a href="/tailor/addcontent/{{id}}">Content</a> &nbsp;
+                            <!-- <a href="/deletecourse">Delete</a> -->
+                            
+                            <form action="/tailor/deletecourse/{{id}}" method="POST" style="display: inline-block;">
+                                <button type="button" style="border:none; background: none; display: inline-block; hover:#9603ff;"
+                                    data-toggle="modal" data-target="#myModal_{{id}}">Delete</button>
+                                <!-- The Modal -->
+                                <div class="modal" id="myModal_{{id}}">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+
+                                            <!-- Modal Header -->
+                                            <div class="modal-header">
+                                                <h4 class="modal-title">Delete Confirmation</h4>
+                                                <button type="button" class="close"
+                                                    data-dismiss="modal">&times;</button>
+                                            </div>
+
+                                            <!-- Modal body -->
+                                            <div class="modal-body">
+                                                Are you sure you want to delete {{title}}?
+                                            </div>
+
+                                            <!-- Modal footer -->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Cancel</button>
+                                                <button type="submit" value="Delete"
+                                                    class="btn btn-danger">Delete</button>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                           
+                            <!-- <a href="/deletecourse/{{id}}" data-toggle="modal" data-target="9">Delete</a>
+                            <form action="/viewcourse"  method="post">
+                            -->
+                            <!-- need form??????-->
+                            <!--delete course modal-->
+
+                            <!-- The Modal -->
+                            <!--
+                                <div class="modal" id="">
+                                  <div class="modal-dialog">
+                                    <div class="modal-content">
+
+                                      -->
+                            <!-- Modal Header -->
+                            <!--
+                                      <div class="modal-header">
+                                        <h4 class="modal-title">Delete Confirmation</h4>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                      </div>
+
+                                      -->
+                            <!-- Modal body -->
+                            <!--
+                                      <div class="modal-body" style="font-size: 20px;">
+                                        Are you sure you want to delete {{title}} ?
+                                      </div>
+
+
+                                      -->
+                            <!-- Modal footer -->
+                            <!--
+                                      <div class="modal-footer">
+                                        <input type="submit" value="Delete" class="btn btn-danger">
+                                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                      </div>
+
+                                    </div>
+                                  </div>
+                                </div> 
+                            </form> -->
+                        </div>
+
                     </div>
                 </div>
-            </div> 
-        </div>
+            </div>
+            {{/each}}
+           
+            {{/if}}
             <!--
+            <div class="col-lg-4 col-md-6 col-sm-12">
+                <div class="blog-wrap-2 mb-30">
+                    <div class="blog-img-2">
+                        -->
+            <!-- <img src="public/img/sewimg2.jpg"> -->
+            <!--
+                        <a href="single-product.html"><img src="/img/sewimg5.jpg"
+                                style="height:150px; width: 100%;"></a>
+                    </div>
+                    <div class="blog-content-2">
+
+                        <h4>DIY Emboidery</h4>
+                        <div class="blog-meta-2">
+                            By Ah Tong Tailor
+                        </div>
+                        <br>
+                        <div>
+                            <p>Want patterns on your clothes? Learn emboidery change how your clothes look!</p>
+                        </div>
+
+                        <div class="blog-share-comment">
+                            <br>
+                            <hr>
+                            <br>
+                            <div class="blog-share" style="float: right;">
+                                <span style="font-size: 25px;">SGD $ 30</span>
+                            </div>
+                        </div>
+                        <div class="blog-btn-2">
+                            <a href="/updatecourse">Edit</a> &nbsp;
+                            <a href="/addcontent">Content</a> &nbsp;
+                            <a href="">Delete</a> -->
+            <!--delete course modal-->
+            <!--
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            -->
+
+
+
+        </div>
+        <div class="pro-pagination-style text-center mt-20">
+            <ul>
+                <li><a class="prev" href="#"><i class="fa fa-angle-double-left"></i></a></li>
+                <li><a class="active" href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a class="next" href="#"><i class="fa fa-angle-double-right"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+<!--
             <div class="col-lg-3">
                 <div class="sidebar-style">
                     <div class="sidebar-widget">
@@ -208,6 +291,6 @@
                     </div>
                 </div>
             </div> -->
-        <!-- </div> -->
-    </div>
+<!-- </div> -->
+</div>
 </div>
