Link to purchase history in transaction_complete

--- a/views/customer/transaction_complete.handlebars
+++ b/views/customer/transaction_complete.handlebars
@@ -19,6 +19,7 @@
                     <h1 style="font-size:75px">Thank You for Shopping With Us!</h1>
                     <h2>Enjoy shopping at TailorNow!</h2>
                     <p>Please check your email or message within 1 - 2 weeks for additional details. Have a nice day! </p>
+                    <li>Take a look at your <a href="/purchasehistory">Purchase History!</a></li>
                         <a href="" class="error-btn" >Back to home page</a>
                 </div>
             </div>
