--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -112,7 +112,7 @@
                         </button>
                         <div class="shopping-cart-content">
                             <ul>
-                                <li><a href="">Orders Cart</a></li>
+                                 <li><a href="/customers_checkout">Orders Cart</a></li>
                                 <li><a href="">Course Cart</a></li>
                             </ul>
                         </div>
