--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -1,4 +1,18 @@
-@@ -15,11 +15,12 @@
+@@ -1,25 +1,26 @@
+<div class="breadcrumb-area pt-35 pb-35 bg-gray-3">
+    <div class="container">
+        <div class="breadcrumb-content text-center">
+            <ul>
+                <li>
+                    <a href="main.handlebars">Home</a>
+                </li>
+                <li class="active">Checkout </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="checkout-area pt-95 pb-100">
+    <div class="container">
         <div class="row">
             <div class="col-lg-7">
                 <div class="billing-info-wrap">
